force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Code__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Code__c</fullName>
    <label>Reference Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>