force-app/main/default/objects/Litmos__Program__c/fields/Litmos__CompliantTillDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__CompliantTillDate__c</fullName>
    <label>Compliant Until</label>
    <type>DateTime</type>
</CustomField>