force-app/main/default/objects/Litmos__Program__c/fields/Litmos__CompliantTillDays__c.field-meta.xml
<CustomField>
    <fullName>Litmos__CompliantTillDays__c</fullName>
    <label>Compliant Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>