force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Deleted__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a course is deleted, flag is checked.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>