force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Description__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Description__c</fullName>
    <label>Course Description</label>
    <type>TextArea</type>
</CustomField>