force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Fee__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Fee__c</fullName>
    <label>Course Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>