force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Image_URL__c</fullName>
    <label>Image URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>