force-app/main/default/objects/Litmos__Program__c/fields/Litmos__p_Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__p_Percentage_Complete__c</fullName>
    <formula>Litmos__Total_Sum_Percentages__c  /  Litmos__Users_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>p_Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>