force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Percentage_Complete__c</fullName>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>