force-app/main/default/objects/Litmos__Program__c/fields/Litmos__TimeLimitDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__TimeLimitDate__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>