force-app/main/default/objects/Litmos__Program__c/fields/Litmos__TimeLimitDays__c.field-meta.xml
<CustomField>
    <fullName>Litmos__TimeLimitDays__c</fullName>
    <label>Days until Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>