force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Total_Sum_Percentages__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Total_Sum_Percentages__c</fullName>
    <label>Total Sum Percentages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>