force-app/main/default/objects/Litmos__Program__c/fields/Litmos__UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Litmos__UpdatedDate__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>