force-app/main/default/objects/Litmos__Program__c/fields/Litmos__Users_Completed__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Users_Completed__c</fullName>
    <label>Users Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>