force-app/main/default/objects/Litmos__Program__c/listViews/Litmos__All.listView-meta.xml
<ListView>
    <fullName>Litmos__All</fullName>
    <columns>NAME</columns>
    <columns>Litmos__LitmosID__c</columns>
    <columns>Litmos__UpdatedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>